<package format="2">
    <name>badger_amcl</name>
    <version>2.0.0</version>
    <description>
        <p>
            amcl is a probabilistic localization system for a robot moving in
            2D. It implements the adaptive (or KLD-sampling) Monte Carlo
            localization approach (as described by Dieter Fox), which uses a
            particle filter to track the pose of a robot against a known map.
        </p>
        <p>
            This node is derived, with thanks, from Andrew Howard's excellent
            'amcl' Player driver.
        </p>
        <p>
            This version is a fork from the amcl repository
            http://wiki.ros.org/amcl v1.14.0 and is written and maintained by
            Badger Technologies.
        </p>
    </description>
    <url>http://wiki.ros.org/amcl</url>
    <author>Brian P. Gerkey</author>
    <author>contradict@gmail.com</author>
    <maintainer email="tylerbuchman@jabil.com">Tyler Buchman</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rosbag</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>badger_file_lib</depend>
    <depend>yaml-cpp</depend>
    <depend>octomap</depend>
    <depend>octomap_ros</depend>
    <depend>octomap_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>angles</depend>
    <build_depend>message_filters</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>std_srvs</build_depend>

    <test_depend>map_server</test_depend>
</package>
